Added internal link to README.md

--- a/project.ipynb
+++ b/project.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Final Project - ECS 171\n",
+    "#### [README.md](./README.md)\n",
     "---"
    ]
   },
